work in progress
almost done

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
         <meta charset="UTF - 8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>RockPaperSicssors</title>
-        <link rel="stylesheet" href="gallery.css">
+        <link rel="stylesheet" href="style.css">
         </head>
 <body>
 <!--Div for options for the user-->
-<div>
+<div class="div2">
 
 </div>
 <!--Div for what opponent chooses-->
-<div>
+<div class="div3">
 
 </div>
-<!--Keep track of score-->
-<div>
+<!--Keep track of score and display of what chosen-->
+<div class="div1">
 
 
 </div>
