--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
         </head>
 <body>
 <!--Div for options for the user-->
+<main class="container">
 <div class="div2">
-
+    <h1 class="h1">Players Choice</h1>
+<img src="svg/icons8-paper-50.png" width="50" height="50" class="img">
+<img src="svg/icons8-rock-64.png" width="50" height="50" class="img">
+<img src="svg/icons8-scissors-50.png" width="50" height="50" class="img">
 </div>
 <!--Div for what opponent chooses-->
 <div class="div3">
-
+<h1 class="h1">Opponents choice</h1>
 </div>
 <!--Keep track of score and display of what chosen-->
+</main>
 <div class="div1">
+<h1 class="h2"> Wins </h1>
+<h1 class="h2">Losses</h1>
+<h1 class="h2">Ties</h1>
 
 
 </div>
