--- a/index.html
+++ b/index.html
@@ -8,28 +8,30 @@
         </head>
 <body>
 <!--Div for options for the user-->
+        <h4>Player Choice</h4>           <h1>Opponents choice</h1>
 <main class="container">
+    
 <div class="div2">
-    <h1 class="h1">Player Choice</h1>
 <button id="paper" onclick="play('paper')"><img src="svg/icons8-paper-50.png"></button>
 <button id="rock" onclick="play('rock')"><img src="svg/icons8-rock-64.png"></button>
 <button id="scissors" onclick="play('scissors')"><img src="svg/icons8-scissors-50.png"></button>
 </div>
 <!--Div for what opponent chooses-->
 <div class="div3">
-<h1 class="h1">Opponents choice</h1>
 <img id="o-img" class="img2">
 </div>
 <!--Keep track of score and display of what chosen-->
 </main>
-<div class="div1">
-<h1 class="h2"> Wins <span id="wins">0</span></h1>
-<h1 class="h2">Losses <span id="loss">0</span></h1>
-<h1 class="h2">Ties <span id="tie">0</span></h1>
 <h3 id="result"></h3>
+<div class="div1">
+<h2> Wins <span id="wins">0</span></h2>
+<h2>Losses <span id="loss">0</span></h2>
+<h2>Ties <span id="tie">0</span></h2>
+
 
 
 </div>
+
 <script src="java.js"></script>
 
 </body>
